--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="125dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="54dp"
         android:ems="10"
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
@@ -31,14 +31,13 @@
         app:layout_constraintTop_toBottomOf="@+id/txt_suran_no" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/txt_verse"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="35dp"
         android:layout_marginEnd="35dp"
         android:layout_marginBottom="181dp"
-        android:text="TextView"
-
+        android:fontFamily="@font/noorehuda"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -54,7 +53,7 @@
         android:layout_marginBottom="25dp"
         android:text="Display Verse"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        app:layout_constraintBottom_toTopOf="@+id/textView6"
+        app:layout_constraintBottom_toTopOf="@+id/txt_verse"
         app:layout_constraintStart_toStartOf="@+id/txt_verse_no"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -63,7 +62,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="74dp"
+        android:layout_marginTop="70dp"
         android:layout_marginBottom="75dp"
         android:text="Surah Number"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
@@ -72,7 +71,6 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="23dp"
